--- a/css/style.css
+++ b/css/style.css
@@ -9,20 +9,31 @@
 
 body {
 	background-color: #aaa;
+	background-image: url('../images/matrix.jpg');
+	background-repeat: no-repeat;
 	font-size: 1rem;
 	font-family: 'IBM Plex Mono', Arial, Helvetica, sans-serif;
+	color: #e9d5da;
 }
 
 .container {
+	padding: 2rem;
 	width: 35%;
 	margin: 0 auto;
+	margin-top: 2rem;
+	border-radius: 3rem;
+	border: 1px solid #88888888;
+	background-color: #88888855;
+	box-shadow: 3px 4px 5px #aaaaaa66;
 }
 
 #exercise {
+	text-align: center;
+	margin-top: 3rem;
 	font-size: 3rem;
 }
 .input {
-	margin-top: 3rem;
+	margin-top: 7rem;
 }
 
 input[type="text"] {
@@ -30,18 +41,21 @@ input[type="text"] {
 	outline: none;
 	background-color: transparent;
 	border: none;
-	border-bottom: 1px solid red;
+	border-bottom: 1px solid #FF7D7D;
 	font-size: 3rem;
+	color: #e9d5da;
 }
 
 #submit {
 	margin-top: 3rem;
-	width: 100%;
+	width: 30%;
+	text-align: center;
 	font-size: 2rem;
 	border: none;
+	letter-spacing: .5rem;
 	padding: 0.3rem 0;
 	font-weight: 900;
-	color: #e9afed;
+	color: #e9d5da;
 	border-radius: 1rem;
-	background-color: #336688;
+	background-color: #4E6C50;
 }
