--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,69 @@ input[type="text"] {
 	border-radius: 1rem;
 	background-color: #4E6C50;
 }
+
+@media screen and (max-width: 1800px) {
+	* {
+		font-size: 90%;
+	}
+	.container {
+		width: 45%;
+	}
+
+	.input {
+		margin-top: 8rem;
+	}
+
+	#submit {
+		margin-top: 8rem;
+	}
+}
+
+@media screen and (max-width: 1600px) {
+	* {
+		font-size: 95%;
+	}
+	.container {
+		width: 40%;
+	}
+
+	.input {
+		margin-top: 8rem;
+	}
+
+	#submit {
+		margin-top: 8rem;
+	}
+}
+@media screen and (max-width: 950px) {
+	* {
+		font-size: 90%;
+	}
+	.container {
+		width: 70%;
+	}
+
+	.input {
+		margin-top: 8rem;
+	}
+
+	#submit {
+		margin-top: 8rem;
+	}
+}
+@media screen and (max-width: 500px) {
+	* {
+		font-size: 55%;
+	}
+	.container {
+		width: 97%;
+	}
+
+	.input {
+		margin-top: 8rem;
+	}
+
+	#submit {
+		margin-top: 8rem;
+	}
+}
