--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ input[type="text"] {
 	color: red;
 }
 
+.error {
+	font-size: 2rem;
+}
+
 @media screen and (max-width: 1800px) {
 	* {
 		font-size: 90%;
