--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,11 @@ input[type="text"] {
 		font-size: 75%;
 	}
 	.container {
-		width: 97%;
+		margin-top: 0;
+		background-color: transparent;
+		border: none;
+		box-shadow: none;
+		width: 100%;
 	}
 
 	.input {
