--- a/css/style.css
+++ b/css/style.css
@@ -73,16 +73,32 @@ input[type="text"] {
 	margin-top: 1rem;
 	font-size: 3rem;
 }
+
 .result {
 	margin-top: 3rem;
 	text-align: center;
 }
+
 .richtig {
-	color: green;
+	color: transparent;
+	text-shadow: 1px 1px 2px lightgreen, 0 0 25px green, 0 0 5px lightgreen;
+	animation: bounce 1s; 
 }
 
 .falsch {
-	color: red;
+	color: transparent;
+	text-shadow: 1px 1px 2px pink, 0 0 25px red, 0 0 5px pink;	
+	animation: bounce 1s; 
+}
+
+@keyframes bounce {
+	from {
+		transform: scale(.2);
+	} 50% {
+		transform: scale(1.2);
+	} to {
+		transform: scale(1);
+	}
 }
 
 .error {
